--- a/assets/jade/ci/layout.jade
+++ b/assets/jade/ci/layout.jade
@@ -4,7 +4,7 @@ html(lang='es-PE')
 	body
 		.container
 			//-header
-			.row
+			.row.f-plomo
 				.col-md-2
 				.col-md-8
 					block header-banner
@@ -90,7 +90,7 @@ html(lang='es-PE')
 					block publicidad-right-image
 						+imagen('../image/cambiatullanta.jpg')
 			//-footer
-			.row
+			.row.f-plomo
 				.col-md-2
 				.col-md-8
 					.row
