--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,15 +1,18 @@
 //*{ 	outline:1px solid rgba(255,0,0,0.3); }
 $color-texto:#8D8383;
+$color-rojiso:#BB1313;
 .text-10{
 	font-size:10px;
 }
 .f-plomo{
-	background-color: #CECED0;
+	background-color: #DDE0E2;
 }
 .t-plomo{
 	color:$color-texto;
 }
-
+.t-rojo{color:$color-rojiso;}
+.pd-medio{padding:0.5em 0;}
+.btn-rojo{background-color:$color-rojiso;color:#fff;padding: 0.5em 1em;text-decoration:none;margin:1em auto;}
 
 #blog,#columnistas{
 	padding:1em 0;
@@ -45,16 +48,22 @@ $color-texto:#8D8383;
 }
 
 #columnistas{
+	.menu-abc{
+		padding: 0.5em;
+		background-color:$color-rojiso;
+		a{color:#fff; text-decoration:none; padding:0.2em 0.8em;border-radius:30px;}
+		a:hover{text-decoration:none; background-color:#E71111;}
+	}
 	.columnista{
 		background-color: #CECED0;
 		margin: 0.2em 0.1em;
 		width: 160px;
-		height:70px;
+		height:60px;
 		img{
 			border:2px solid #fff;
 			margin: 1em auto;
 		}
-		h5{color:#111; text-align:left;font-size:10px;margin-bottom:2px;}
+		h4{color:#111; text-align:left;font-size:10px;margin-bottom:2px;}
 		p{color:#383661; text-align:left; font-size:11px; font-weight:bold;}
 		.col-xs-7{padding:0;}
 	}
