--- a/assets/jade/ci/mixin.jade
+++ b/assets/jade/ci/mixin.jade
@@ -1,3 +1,6 @@
+//- mixin para titular en index
+mixin titular-principal(titular)
+	h1= titular
 //-mixin para todas las paginas solo enviando la url
 mixin imagen(url)
 	img.img-responsive(src= url)
