--- a/assets/jade/contacto.jade
+++ b/assets/jade/contacto.jade
@@ -1,5 +1,7 @@
 extends ci/layout.jade
 include ci/mixin.jade
+block header-editorial-noticia
+	+header-editorial('DOMINGO','HABLA LA LIDEREZA DEL NACIONALISMO')
 block content
 	h1.text-center Contáctese con nosotros
 	p Llena este formulario si necesita enviarnos alguna información acerca del contenido de la página web, su funcionalidad, o si tiene alguna propuesta de información o mejora del sitio.Asi mismo, puede hacer llegar a losredactores su opinión acerca de los contenidos de una determinada sección el cual podrá elegir como destinatario.
