--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -2,3 +2,6 @@ extends ci/layout.jade
 include ci/mixin.jade
 block header-editorial-noticia
 	+header-editorial('DOMINGO','HABLA LA LIDEREZA DEL NACIONALISMO')
+block content
+	+titular-principal('GUERRA EN LA MUNICIPALIDAD DE LIMA METROPOLITANA')
+	+
