--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,4 +1,4 @@
-// *{ 	outline:1px solid rgba(255,0,0,0.3); }
+*{ 	outline:1px solid rgba(255,0,0,0.3); }
 $color-texto:#8D8383;
 .text-10{
 	font-size:10px;
