ultimas noticias, home

--- a/assets/jade/blog.jade
+++ b/assets/jade/blog.jade
@@ -5,7 +5,7 @@ block header-editorial-noticia
 block content
 	#blog
 		+seccion('BLOG','LO ULTIMO EN BLOGS')
-		ul.list-unstyled.list-inline.pdt-1
+		ul.list-unstyled.list-inline
 			+articulo('Lunes, 14 de Julio de 2015','El gol de la muerte','../image/blog_avatar_01.jpg','BLOG','LIBROS')
 			+articulo('Lunes, 14 de Julio de 2015','Dios ha muerto... tengo las manos cubiertas de sangre','../image/blog_avatar_02.jpg','BLOG','Ya lo pasado, PASADO')
 			+articulo('Lunes, 14 de Julio de 2015','¿Cuál es tu queso favorito?','../image/blog_avatar_03.jpg','BLOG','Décimas cosas')
@@ -27,3 +27,4 @@ block content
 			+articulo('Lunes, 14 de Julio de 2015','El gol de la muerte','../image/blog_avatar_01.jpg','BLOG','LIBROS')
 			+articulo('Lunes, 14 de Julio de 2015','Dios ha muerto... tengo las manos cubiertas de sangre','../image/blog_avatar_02.jpg','BLOG','Ya lo pasado, PASADO')
 			+articulo('Lunes, 14 de Julio de 2015','¿Cuál es tu queso favorito?','../image/blog_avatar_03.jpg','BLOG','Décimas cosas')
+
