--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -4,4 +4,22 @@ block header-editorial-noticia
 	+header-editorial('DOMINGO','HABLA LA LIDEREZA DEL NACIONALISMO')
 block content
 	+titular-principal('GUERRA EN LA MUNICIPALIDAD DE LIMA METROPOLITANA')
-	+
+	.text-center
+		ul.list-unstyled.list-inline
+			+li-a-img('','../image/sprites/ico-facebook.png')
+			+li-a-img('','../image/sprites/ico-twitter.png')
+			+li-a-img('','../image/sprites/ico-google-plus.png')
+			+li-a-img('Hace 12 minutos','../image/bullet.gif')
+			+li-a-img('POLITICA','')
+	.row
+		.col-md-6
+			+imagen('../image/img_grid_principal.jpg')
+			h3 JNE impulsará campaña en favor de la aprobación de la Reforma Electoral
+		.col-md-6
+			ul.list-unstyled
+				li
+					+imagen('../image/img_grid_secundario.jpg')
+					h4 Martin Belaunde Lossio: Empresas vinculadas al empresario contrataron por S/. 3 000 millones | FOTOS
+				li
+					+imagen('../image/img_grid_especiales.jpg')
+					h4 Sub-20: Perú vs. Paraguay: bicolor empató 1-1 y pasó al hexagonal final de Sudamericano | VIDEO
