--- a/assets/jade/ci/mixin.jade
+++ b/assets/jade/ci/mixin.jade
@@ -72,3 +72,25 @@ mixin columnista(url,nombre,frase)
 				a(href="#")
 					h4=nombre
 				p=frase
+//- mixin ultimas noticias home
+mixin ultimas-noticias(fecha,titulo,url,texto,numcomentarios,tipo)
+	li.ultima-noticia
+		p.text-10=fecha
+		a(href="#")
+			h3=titulo
+		.row
+			.col-sm-4
+				img.img-responsive(src= url)
+			.col-sm-8
+				a(href="#")
+					p=texto
+				ul.list-unstyled.list-inline
+					+li-a-img('','../image/sprites/ico-facebook.png')
+					+li-a-img('','../image/sprites/ico-twitter.png')
+					+li-a-img('','../image/sprites/ico-google-plus.png')
+					+li-a-img('','../image/bullet.gif')
+					+li-a-img(numcomentarios ,'../image/ico_comment.png')
+					+li-a-img('','../image/bullet.gif')
+					+header-lista(tipo)
+					+li-a-img('','../image/bullet.gif')
+					+li-span('fa fa-youtube-play')
