--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -14,7 +14,8 @@ $color-rojiso:#BB1313;
 .t-azulado{color:#112E8D;}
 .t-celeste{color:#4DB8EA;}
 .pd-medio{padding:0.5em 0;}
-.btn-rojo{background-color:$color-rojiso;color:#fff;padding: 0.5em 1em;text-decoration:none;margin:1em auto;}
+.btn-rojo{background-color:$color-rojiso;color:#fff;padding: 0.5em 1em;text-decoration:none;margin:2em auto;}
+.btn-plomo{background-color:#95A6AB;color:#fff;padding: 0.5em 1em;text-decoration:none;margin:2em auto;}
 
 #blog,#columnistas{
 	padding:1em 0;
