--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -20,3 +20,25 @@ block content
 				+ultimas-noticias('Hace 1 hora 12 min','Emma Watson protagonizara "La bella y la bestia"','../image/img_news.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nihil mollitia possimus distinctio maiores perspiciatis dignissimos maxime dolorem quam...','ESPECTACULOS')
 				+ultimas-noticias('Hace 1 hora 12 min','Emma Watson protagonizara "La bella y la bestia"','../image/img_news.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione nihil mollitia possimus distinctio maiores perspiciatis dignissimos maxime dolorem quam...','ESPECTACULOS')
 		.col-sm-4
+			//-suscribete
+			.row
+			//- aweita
+			.row
+				+imagen('../image/logo_aweita.jpg')
+				ul.list-unstyled.list-inline
+					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+			//-fotos destacadas
+			.row
+				a.btn-plomo(href="#") FOTOS DESTACADAS
+				+imagen('../image/img_fotodes_prominent.jpg')
+				ul.list-unstyled.list-inline
+					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+			//-especiales
+			.row
+				a.btn-plomo(href="#") ESPECIALES
+				+imagen-capa('../image/img_especiales_aside.jpg','Regimen Laboral Juvenil')
