--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -24,9 +24,14 @@ block content
 					+imagen('../image/img_grid_especiales.jpg')
 					h4 Sub-20: Perú vs. Paraguay: bicolor empató 1-1 y pasó al hexagonal final de Sudamericano | VIDEO
 	//- Columnistas
-	.row
-		.col-sm-8
-		.col-sm-4
+	+divisor-seccion('COLUMNISTAS')
+	ul.list-unstyled.list-inline
+		+home-columnista('../image/img-columnistas.jpg','Mario Vargas Llosa','Megarrenuncia apulpinante')
+		+home-columnista('../image/img-columnistas.jpg','Mario Vargas Llosa','Megarrenuncia apulpinante')
+		+home-columnista('../image/img-columnistas.jpg','Mario Vargas Llosa','Megarrenuncia apulpinante')
+		+home-columnista('../image/img-columnistas.jpg','Mario Vargas Llosa','Megarrenuncia apulpinante')
+		+home-columnista('../image/img-columnistas.jpg','Mario Vargas Llosa','Megarrenuncia apulpinante')
+		+home-columnista('../image/img-columnistas.jpg','Mario Vargas Llosa','Megarrenuncia apulpinante')
 	//- 
 	.row
 	//- ultimas noticias
