--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -56,7 +56,11 @@ block content
 		.col-sm-4
 			//-suscribete
 			.row
-				
+				+imagen('../image/img_sucribe.png')
+				.text-center
+					h3 Suscribete a nuestro boletín
+					input(type='text')
+					input(type='submit')
 			//- aweita
 			.row.aweita.pd-medio
 				+imagen('../image/logo_aweita.jpg')
