--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -62,13 +62,13 @@ block content
 					input(type='text')
 					input(type='submit')
 			//- aweita
-			.row.aweita.pd-medio
+			.row.aweita.pd-medio.mg-medio
 				+imagen('../image/logo_aweita.jpg')
 				ul.list-unstyled.list-inline
-					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
-					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
-					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
-					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/img_aweita.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/img_grid_especiales.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/img_aweita.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/img_grid_especiales.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
 				a.borde-bajo.text-10(href="#") Mas en 
 					span aweita.pe
 			//-fotos destacadas
@@ -82,7 +82,50 @@ block content
 					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
 			//-especiales
 			.row.especiales.pd-medio
-				a.btn-plomo(href="#") ESPECIALES
+				//-a.btn-plomo(href="#") ESPECIALES
+			//-calicantura
+			.row
+			//-blogueros
+			.row
+			//-edicion impresa
+			.row
+			//- infografias
+			.row
+			//-preguntas
+			.row
+			//-libero
+			.row.libero.pd-medio.mg-medio
+				+imagen('../image/logo_libero.jpg')
+				ul.list-unstyled.list-inline
+					+art('../image/img_especiales.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/img_especiales.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+				a.borde-bajo.text-10(href="#") Mas en 
+					span Libero.pe
+			//- popular
+			.row.popular.pd-medio.mg-medio
+				+imagen('../image/logo_popular.jpg')
+				ul.list-unstyled.list-inline
+					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+				a.borde-bajo.text-10(href="#") Mas en 
+					span elPopular.pe
+			//- wapa
+			.row.wapa.pd-medio.mg-medio
+				+imagen('../image/logo_wapa.jpg')
+				ul.list-unstyled.list-inline
+					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
+				a.borde-bajo.text-10(href="#") Mas en 
+					span Wapa.pe
+			//-reportero ciudadano
+			.row
+
 
 
 
