--- a/assets/jade/index.jade
+++ b/assets/jade/index.jade
@@ -82,15 +82,38 @@ block content
 					+art('../image/fotogaleria_main.jpg',' Lorem ipsum dolor sit amet, consectetur adipisicing elit.')
 			//-especiales
 			.row.especiales.pd-medio
-				//-a.btn-plomo(href="#") ESPECIALES
+				a.btn-plomo(href="#") ESPECIALES
+				ul.list-unstyled.list-inline
+					+imagen-capa('../image/img_especiales.jpg','Regimen laboral juvenil')
+					+imagen-capa('../image/img_especiales.jpg','Regimen laboral juvenil')
+					+imagen-capa('../image/img_especiales.jpg','Regimen laboral juvenil')
+					+imagen-capa('../image/img_especiales.jpg','Regimen laboral juvenil')
 			//-calicantura
 			.row
+				a.btn-rojo(href="#") CALICANTURA DEL DIA
+				+imagen('../image/img_carlincatura_sd.jpg')
 			//-blogueros
 			.row
+				a.btn-plomo(href="#") NUESTROS BLOGUEROS
+				ul.list-unstyled.list-inline
+					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Charlie Hebdo, historia que no debe repetirse')
+					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Charlie Hebdo, historia que no debe repetirse')
+					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Charlie Hebdo, historia que no debe repetirse')
+					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Charlie Hebdo, historia que no debe repetirse')
+					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Charlie Hebdo, historia que no debe repetirse')
+					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Charlie Hebdo, historia que no debe repetirse')
+					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Charlie Hebdo, historia que no debe repetirse')
+					+blogueros('../image/img_blogueros.jpg','Augusto Alvarez Rodrich','Charlie Hebdo, historia que no debe repetirse')
+				a.t-rojo(href="#") Todos los blog
 			//-edicion impresa
 			.row
+				a.btn-rojo(href="#") NEDICION IMPRESA
 			//- infografias
 			.row
+				a.btn-plomo(href="#") INFOAGRFIAS
+				ul.list-unstyled.list-inline
+					+imagen-capa('../image/img_especiales.jpg','Regimen laboral juvenil')
+					+imagen-capa('../image/img_especiales.jpg','Regimen laboral juvenil')
 			//-preguntas
 			.row
 			//-libero
