--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -22,6 +22,7 @@ a:hover{text-decoration:none;}
 .pd-medio{padding:0.5em 0;}
 .btn-rojo{font-weight:bold;background-color:$color-rojiso;color:#fff;padding: 0.5em 1em;text-decoration:none;margin:2em auto;}
 .btn-plomo{font-weight:bold;background-color:#95A6AB;color:#fff;padding: 0.5em 1em;text-decoration:none;margin:2em auto;}
+.borde-inf{	border-bottom:1px solid $color-texto;padding:0.5em 0;}
 
 #blog,#columnistas{
 	padding:1em 0;
@@ -82,11 +83,11 @@ a:hover{text-decoration:none;}
 	padding:0.5em;
 	text-align:left;
 	a{color:#111;}
-	border-bottom:1px solid $color-texto;
 }
 .aweita,.popular,.wapa,.libero{
 	border:1px solid #DAD3D3;
 	padding:0.5em;
+	margin:0 -1em;
 	text-align:center;
 	img{margin:auto;}
 	li{
@@ -109,5 +110,14 @@ a:hover{text-decoration:none;}
 		background-color:rgba(185, 184, 192, 0.8);
 		bottom:30px;
 		a{color:#111;font-weight:bold;}
+	}
+}
+.blogueros{
+	a{color:#111;}
+	img{margin:auto;}
+
+	.bloguer{
+		padding:0;
+		margin:0;
 	}
 }
