seccion blog y columnas estilados

--- a/assets/jade/blog.jade
+++ b/assets/jade/blog.jade
@@ -4,7 +4,7 @@ block header-editorial-noticia
 	+header-editorial('DOMINGO','HABLA LA LIDEREZA DEL NACIONALISMO')
 block content
 	#blog
-		+seccion('BLOG','LO ULTIMO EN BLOGS')
+		+seccion('Blogs','LO ULTIMO EN BLOGS')
 		ul.list-unstyled.list-inline
 			+articulo('Lunes, 14 de Julio de 2015','El gol de la muerte','../image/blog_avatar_01.jpg','BLOG','LIBROS')
 			+articulo('Lunes, 14 de Julio de 2015','Dios ha muerto... tengo las manos cubiertas de sangre','../image/blog_avatar_02.jpg','BLOG','Ya lo pasado, PASADO')
