--- a/assets/jade/columnistas.jade
+++ b/assets/jade/columnistas.jade
@@ -4,7 +4,7 @@ block header-editorial-noticia
 	+header-editorial('DOMINGO','HABLA LA LIDEREZA DEL NACIONALISMO')
 block content
 	#columnistas
-		+seccion('BLOG','LO ULTIMO EN BLOGS')
+		+seccion('Columnistas','LO ULTIMO EN columnistas')
 		ul.list-unstyled.list-inline.pdt-1
 			+articulo('Lunes, 14 de Julio de 2015','El gol de la muerte','../image/img_author_columnista.jpg','Auguste Alvares Rodrics','Claro y directo')
 			+articulo('Lunes, 14 de Julio de 2015','Dios ha muerto... tengo las manos cubiertas de sangre','../image/img_blogueros.jpg','Mirke Laver','Observador')
@@ -18,9 +18,11 @@ block content
 			+articulo('Lunes, 14 de Julio de 2015','El gol de la muerte','../image/img_author_columnista.jpg','Auguste Alvares Rodrics','Claro y directo')
 			+articulo('Lunes, 14 de Julio de 2015','Dios ha muerto... tengo las manos cubiertas de sangre','../image/img_blogueros.jpg','Mirke Laver','Observador')
 			+articulo('Lunes, 14 de Julio de 2015','¿Cuál es tu queso favorito?','../image/blog_avatar_01.jpg','BLOG','Décimas cosas')
-		a.btn-rojo(href="#") Todas las columnas
+		.div.text-center
+			a.btn-rojo.text-center(href="#") TODAS LAS COLUMNAS
 		br
 		br
+		+seccion-descripcion('TODOS LOS COLUMNISTAS')
 		ul.menu-abc.list-unstyled.list-inline.pdt-1
 			+header-lista('TODOS')
 			+header-lista('A B C')
@@ -31,7 +33,6 @@ block content
 			+header-lista('P Q R S')
 			+header-lista('T U V')
 			+header-lista('W X Y Z')
-		+seccion-descripcion('TODOS LOS COLUMNISTAS')
 		ul.list-unstyled.list-inline.pdt-1
 			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
 			+columnista('../image/blog_avatar_01.jpg','Francisco Durand','Tiro al blanco')
